fixes, custom gamemode, randomtp fix, etc